--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "google-contacts",
-  "version": "0.0.2",
+  "name": "google-contacts-meteor",
+  "version": "0.0.3",
   "description": "API wrapper for Google Contacts",
   "main": "index.js",
   "directories": {
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/olalonde/Google-Contacts.git"
+    "url": "git://github.com/priyadarshy/Google-Contacts.git"
   },
   "keywords": [
     "google",
@@ -21,6 +21,6 @@
   "dependencies": {
     "underscore": ""
   },
-  "author": "Ajnasz <ajnasz@ajnasz.hu>",
+  "author": "Ashutosh <root@ashuto.sh>",
   "license": "MIT"
 }
